Quick Fixes for Overflowing Sections
Quick fixes in my skills and portfolio section whose content was overflowing.

--- a/index.css
+++ b/index.css
@@ -58,11 +58,11 @@ p {
 
 .container-fluid {
     padding: 3% 15% 3% 15%;
-    height: 100vh;
+    height: 110vh;
 }
 
 #skills {
-    height: 110vh;
+    height: 140vh;
 }
 
 .cover-photo, h1.home {
